feat(*): send a worker task result for each subflow creation and termination